<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.adam.academytutorialapp.MainActivity"
    android:background="@color/dark_grey">


    <TextView

        android:id="@+id/berserk_title"

        android:textSize= "50dp"

        android:textColor="@color/BlackestBlackistBlack"
        android:text="@string/berserk"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize= "22dp"
        android:fontFamily="cursive"
        android:textColor="@color/BlackestBlackistBlack"
        android:text="@string/greeting_message"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"/>


    <EditText
        android:textAlignment="center"
        android:id="@+id/enter_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/first_hint_text"
        android:textColorHint="@color/white_af"
        android:textColor="@color/BlackestBlackistBlack"
        android:fontFamily="monospace"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:includeFontPadding="true"/>



    <Button


        android:alpha="1"
        android:text="@string/main_screen_button_text"
        android:textColor="@color/dark_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/very_dark_grey"
        android:onClick="onButtonClicked"
        android:layout_marginBottom="20dp"/>


    <Button
        android:layout_marginBottom="20dp"
        android:text="@string/view_picture"
        android:background="@color/very_dark_grey"
        android:textColor="@color/dark_grey"
        android:onClick="onViewImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="onSignUpButton"
        android:layout_marginBottom="20dp"
        android:text="@string/form_button_text"
        android:background="@color/very_dark_grey"
        android:textColor="@color/dark_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button


        android:alpha="1"
        android:text="@string/gallery_button_text"
        android:textColor="@color/dark_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/very_dark_grey"
        android:onClick="omGalleryButtonClicked"
        android:layout_marginBottom="20dp"/>



        />



</LinearLayout>
