<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.adam.academytutorialapp.FormFillActivity"
    android:background="@color/dark_grey">

    <TextView

        android:id="@+id/berserk_title_form"

        android:textSize= "50dp"

        android:textColor="@color/BlackestBlackistBlack"
        android:text="@string/berserk"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/BlackestBlackistBlack"
        android:textSize= "22dp"
        android:fontFamily="cursive"
        android:layout_gravity="center"
        android:text="Please enter your details"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:textAlignment="center"
        android:id="@+id/form_fill_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColorHint="@color/white_af"
        android:textColor="@color/BlackestBlackistBlack"
        android:fontFamily="monospace"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:includeFontPadding="true"/>

    <EditText
        android:inputType="number"
        android:textAlignment="center"
        android:id="@+id/form_fill_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:textColorHint="@color/white_af"
        android:textColor="@color/BlackestBlackistBlack"
        android:fontFamily="monospace"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:includeFontPadding="true"/>

    <EditText
        android:inputType="textWebEmailAddress"
        android:textAlignment="center"
        android:id="@+id/form_fill_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/white_af"
        android:textColor="@color/BlackestBlackistBlack"
        android:fontFamily="monospace"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:includeFontPadding="true"/>

    <EditText
        android:inputType="number"
        android:hapticFeedbackEnabled="true"
        android:textCursorDrawable="@color/skyBlue"
        android:textColorHighlight="@color/skyBlue"
        android:textAlignment="center"
        android:id="@+id/form_fill_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:textColorHint="@color/white_af"
        android:textColor="@color/BlackestBlackistBlack"
        android:fontFamily="monospace"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:includeFontPadding="true"/>

    <Button
        android:onClick="onSubmitPressed"
        android:id="@+id/form_submit_button"
        android:hapticFeedbackEnabled="true"
        android:background="@color/very_dark_grey"
        android:textColor="@color/dark_grey"
        android:text="@string/form_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
