<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.adam.academytutorialapp.DisplayInfoActivity"
    android:background="@color/dark_grey">>

    <TextView

        android:id="@+id/berserk_title_form"
        android:textSize= "50dp"
        android:textColor="@color/BlackestBlackistBlack"
        android:text="@string/berserk"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp">

        <TextView

            android:layout_weight="1"
            android:textSize= "14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label"/>

        <TextView

            android:fontFamily="cursive"
            android:textSize= "22dp"
            android:layout_weight="1"
            android:id="@+id/name_view_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp">

        <TextView
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize= "14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_label"/>

        <TextView

            android:layout_gravity="right"
            android:layout_weight="1"
            android:textSize= "22dp"
            android:fontFamily="cursive"
            android:id="@+id/age_view_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp">

        <TextView

            android:layout_weight="1"
            android:textSize= "14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_label"/>


        <TextView

            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize= "22dp"
            android:fontFamily="cursive"
            android:id="@+id/email_view_display"
             />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp">

        <TextView

            android:layout_weight="1"
            android:textSize= "14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phonenum_label"/>

        <TextView


            android:layout_weight="1"
            android:textSize= "22dp"
            android:fontFamily="cursive"
            android:id="@+id/phonenum_view_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <TextView

        android:id="@+id/berserk_end_form"
        android:textSize= "50dp"
        android:textColor="@color/BlackestBlackistBlack"
        android:text="@string/goodbye_text"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>
